<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Onboarding.WelcomeActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="277dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/imgzuribinlogo" />


    <LinearLayout
        android:id="@+id/welcomeLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rounded_corners_green">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:textSize="20sp"
           android:fontFamily="@font/ubuntu_bold"
            android:layout_margin="10dp"/>

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textSize="16sp"
            android:fontFamily="@font/ubuntu_bold"
            android:textColor="@color/white"
            android:text="@string/info"/>

        <LinearLayout
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

           <com.google.android.material.button.MaterialButton
               android:id="@+id/btnWelcomeSignup"
               android:layout_width="130dp"
               android:layout_height="wrap_content"
               app:cornerRadius="30dp"
               android:backgroundTint="@color/black"
               android:fontFamily="@font/ubuntu_bold"
               android:text="@string/sign_up"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnWelcomeSignin"
                android:layout_width="130dp"
                android:layout_marginStart="20dp"
                app:cornerRadius="30dp"
                android:backgroundTint="@color/white"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:fontFamily="@font/ubuntu_bold"
                android:textColor="@color/black"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>