<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#228B22"
    tools:context=".Authentication.loginActivity">

   <LinearLayout

       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">

       <ImageView
           android:id="@+id/loginbackArrow"
           android:layout_width="30dp"
           android:layout_height="30dp"
           android:layout_marginStart="10dp"
           android:layout_marginTop="20dp"
           android:contentDescription="@string/cd"
           android:src="@drawable/ic_arrow_back"/>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="10dp"
           android:layout_marginTop="10dp"
           android:text="@string/sign_in"
           android:textColor="@color/white"
           android:textStyle="bold"
           android:textSize="25sp"/>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="10dp"
           android:layout_marginTop="10dp"
           android:text="@string/sign_in_info"
           android:textColor="@color/white"
           android:textStyle="italic"
           android:textSize="18sp"/>

       <com.airbnb.lottie.LottieAnimationView
           android:layout_width="150dp"
           android:layout_height="150dp"
           app:lottie_autoPlay="true"
           android:layout_marginTop="10dp"
           app:lottie_loop="true"
           android:layout_gravity="center_horizontal"
           app:lottie_rawRes="@raw/penandpaper"/>


       <LinearLayout
           android:layout_width="match_parent"
           android:layout_marginTop="30dp"
           android:layout_marginEnd="5dp"
           android:layout_marginStart="5dp"
           android:padding="15dp"
           android:layout_height="wrap_content"
           android:orientation="vertical"
           android:background="@drawable/rounded_corners_white">

           <com.google.android.material.textfield.TextInputLayout
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               app:endIconMode="clear_text">

               <EditText
                   android:id="@+id/edtxtlogin_email"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/email"
                   android:autofillHints="email"
                   android:inputType="textEmailAddress"
                   />
           </com.google.android.material.textfield.TextInputLayout>

           <com.google.android.material.textfield.TextInputLayout
               style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="5dp"
               app:endIconMode="password_toggle">

               <EditText
                   android:id="@+id/edtxtlogin_password"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/password"
                   android:autofillHints="email"
                   android:inputType="textPassword"
                   />
           </com.google.android.material.textfield.TextInputLayout>

           <com.google.android.material.progressindicator.CircularProgressIndicator
               android:id="@+id/siIndicator"
               android:layout_width="4dp"
               android:layout_height="1dp"
               android:layout_gravity="center_horizontal"
               android:layout_marginTop="5dp"
               android:indeterminate="true"
               android:visibility="gone"
               app:indicatorColor="@color/green" />

           <com.google.android.material.button.MaterialButton
               android:id="@+id/btnLogin"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               app:cornerRadius="10dp"
               android:layout_marginTop="5dp"
               android:backgroundTint="@color/black"
               android:fontFamily="@font/ubuntu_bold"
               android:text="@string/sign_in"
               android:layout_gravity="center_horizontal"/>

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="5dp"
               android:layout_gravity="center_horizontal"
               android:text="@string/don_t_have_an_account"
               android:textSize="16sp"
               android:textColor="@color/black"
               android:textStyle="bold"/>

           <com.google.android.material.button.MaterialButton
               android:id="@+id/btnSignUp"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="center_horizontal"
               android:layout_marginTop="5dp"
               app:cornerRadius="30dp"
               style="@style/Widget.MaterialComponents.Button.TextButton"
               android:text="@string/sign_up"
               android:textColor="@color/green"/>



       </LinearLayout>



   </LinearLayout>











</RelativeLayout>